--- a/BASES/index.html
+++ b/BASES/index.html
@@ -7,6 +7,6 @@
     <title>Bases TypeScript</title>
 </head>
 <body>
-    <script src="tipos/numbers.js"></script>
+    <script src="objetos/objects.js"></script>
 </body>
 </html>
